--- a/Yatzy.csproj
+++ b/Yatzy.csproj
@@ -142,6 +142,12 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Die1.png" />
+    <Content Include="Assets\Die2.png" />
+    <Content Include="Assets\Die3.png" />
+    <Content Include="Assets\Die4.png" />
+    <Content Include="Assets\Die5.png" />
+    <Content Include="Assets\Die6.png" />
     <Content Include="Assets\DieButtonImage.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
