--- a/Yatzy.csproj
+++ b/Yatzy.csproj
@@ -149,6 +149,7 @@
     <Content Include="Assets\Die5.png" />
     <Content Include="Assets\Die6.png" />
     <Content Include="Assets\DieButtonImage.png" />
+    <Content Include="Assets\DieSlot.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
