--- a/Yatzy.csproj
+++ b/Yatzy.csproj
@@ -135,6 +135,8 @@
       <DependentUpon>StartPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YatzyGame\Regler.cs" />
+    <Compile Include="YatzyGame\Tarning.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
